# col2plane

./: .gitignore  CMakeLists.txt  TODO.MD  TODO.txt  camera_locations.txt  main.cpp  my_tags.txt  notes.txt  readme.md  run_model_transformer.sh  s_q_t_to_4x4_mat.cpp  scale_trans.txt  tag_world_pos.txt  tag_world_pos_old.txt  tag_world_pos_old2.txt  transform.txt
paskea/: paskea  three_p_solve.cpp
src/: col2plane.cpp  col2plane.h  colmap_stuff.cpp  colmap_stuff.h  in_out.cpp  in_out.h  lm_solver.h  lm_sover.h  locations.cpp  tag_image_solver.cpp  tag_image_solver.h  tag_locations.cpp  tag_locations.h  tags_to_file.cpp  tags_to_file.h  three_p_solve.cpp  three_p_solve.h
